few small fixes and I added Bob's AI car class. time to get some AI working.

--- a/DX11 Framework.vcxproj.filters
+++ b/DX11 Framework.vcxproj.filters
@@ -56,6 +56,9 @@
     <ClInclude Include="PlaneParticleModel.h">
       <Filter>Headers</Filter>
     </ClInclude>
+    <ClInclude Include="AICar.h">
+      <Filter>Headers</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Appearance.cpp">
@@ -92,6 +95,9 @@
       <Filter>CPP</Filter>
     </ClCompile>
     <ClCompile Include="PlaneParticleModel.cpp">
+      <Filter>CPP</Filter>
+    </ClCompile>
+    <ClCompile Include="AICar.cpp">
       <Filter>CPP</Filter>
     </ClCompile>
   </ItemGroup>
